FEAT: added comments endpoints
