# gen/openapi/openapi.yaml
@@ -15,11 +15,9 @@ tags:
   - name: me
     description: Everything about managing current user profile
   - name: users
-    description: Everything about finding users
+    description: Everything about searching users
   - name: jokes
-    description: Everything about finding jokes
-  - name: comments
-    description: Everything about finding comments
+    description: Everything about searching jokes
 externalDocs:
   description: Learn more about the project.
   url: https://github.com/abc-valera/flugo-api-golang
@@ -274,6 +272,8 @@ paths:
                 explanation:
                   type: string
                   example: Joke explanation
+              required:
+                - joke_id
       responses:
         '201':
           description: Successful operation
@@ -301,6 +301,109 @@ paths:
       responses:
         '204':
           description: Successful operation
+        default:
+          $ref: '#/components/responses/code_error'
+  /me/comments:
+    post:
+      tags:
+        - me
+      description: Creates a comment for the current user and the current joke
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Create Comment Request
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: string
+                  example: '1'
+                joke_id:
+                  type: string
+                  example: '1'
+                text:
+                  type: string
+                  example: Text of comment 1
+              required:
+                - user_id
+                - joke_id
+                - text
+      responses:
+        '200':
+          description: Comment created
+        default:
+          $ref: '#/components/responses/code_error'
+    put:
+      tags:
+        - me
+      description: Updates a comment of the current user
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Update Comment Request
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                comment_id:
+                  type: string
+                  example: '1'
+                text:
+                  type: string
+                  example: Text of comment 1
+              required:
+                - comment_id
+      responses:
+        '200':
+          description: Comment updated
+        default:
+          $ref: '#/components/responses/code_error'
+    delete:
+      tags:
+        - me
+      description: Deletes a comment of the current user
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: Delete Comment Request
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                comment_id:
+                  type: string
+                  example: '1'
+              required:
+                - comment_id
+      responses:
+        '204':
+          description: Comment deleted
+        default:
+          $ref: '#/components/responses/code_error'
+  /comments/{joke_id}:
+    get:
+      tags:
+        - comments
+      description: Returns comments of the joke
+      parameters:
+        - name: joke_id
+          in: path
+          description: ID of the joke to get comments
+          required: true
+          schema:
+            type: string
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          $ref: '#/components/responses/comments'
         default:
           $ref: '#/components/responses/code_error'
 components:
@@ -381,6 +484,28 @@ components:
         - title
         - text
         - createdAt
+    comment:
+      type: object
+      properties:
+        id:
+          type: string
+        user_id:
+          type: string
+        joke_id:
+          type: string
+        text:
+          type: string
+          example: Text of comment 1
+        createdAt:
+          type: string
+          format: date-time
+          example: '2021-08-01T00:00:00Z'
+      required:
+        - id
+        - user_id
+        - joke_id
+        - text
+        - createdAt
   responses:
     code_error:
       description: General Error
@@ -407,3 +532,16 @@ components:
                   $ref: '#/components/schemas/joke'
             required:
               - jokes
+    comments:
+      description: Array of comments
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              comments:
+                type: array
+                items:
+                  $ref: '#/components/schemas/comment'
+            required:
+              - comments
